# sasta-chatgpt

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
templates/: index.html
