[tool.poetry]
name = "sasta-chatgpt"
version = "0.1.0"
description = "Access ChatGPT-4 API using personal account."
authors = ["Ankit Mathur <val.mathur@gmail.com>", "Nitesh Singh Jaswal <nitesh.jaswal@signify.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
pydantic = "^1.10.7"
flask = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
